@@ -1,4 +1,4 @@
-Changelog started November 2006; Currently at version 0.8.3
+Changelog started November 2006; Currently at version 0.8.4
 
 Legend:
 --------------------------------------------------------------------------------
@@ -9,6 +9,10 @@ Legend:
  - Feature or option removal.
  % Development flag or note, such as branching.
 
+
+Pretty URLs 0.8.4                                                    ??
+================================================================================
+ ! Base: Replace cached URLs in 2.0. (QueryString.php)
 
 Pretty URLs 0.8.3                                                    9 May, 2008
 ================================================================================
